@@ -41,7 +41,7 @@ body {
 
 .content-wrapper {
   max-width: 80%;
-  min-height: 78vh;
+  min-height: calc(100vh - var(--header-height, 80px) - var(--footer-height, 80px));
   margin: 0 auto;
   width: 100%;
   flex: 1;
